# sbv2_core

./: Cargo.toml  LICENSE  LICENSE.original  README.md
src/: bert.rs  errors.rs  jtalk.rs  lib.rs  model.rs  mora.rs  nlp.rs  norm.rs  style.rs  tokenizer.rs  tts.rs  tts_extension.rs  tts_util.rs
