[package]
name = "sbv2_core"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0.11"
jpreprocess = { version = "0.10.0", features = ["naist-jdic"] }
ort = { git = "https://github.com/pykeio/ort.git", tag = "v2.0.0-rc.7" }
num_cpus = "1.16.0"
tokenizers = "0.21.0"
ndarray = "0.16.1"
tar = "0.4.43"
zstd = "0.13.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
regex = "1.11.1"
hound = "3.5.1"

[features]
cuda = ["ort/cuda"]
cuda_tf32 = ["cuda"]
dynamic = ["ort/load-dynamic"]
